css/index.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Open Sans', sans-serif;
    font-weight: 400;
    font-size: 16px;
    position: relative;
}

.container {
    max-width: 1024px;
    margin: 0 auto;
    padding: 0 20px;
}

#header {
    text-align: center;
}

#header h1 {
    font-size: 30px;
    margin-top: 60px;
    margin-bottom: 40px;
}

#header p {
    color: #505050;
    margin-bottom: 50px;
}

#header img {
    width: 50%;
    margin-bottom: 100px;
}

#search-section  {
    text-align: center;
    margin-bottom: 100px;
}

#search-section fieldset, 
#search-section legend {
    border: 0;
    margin: 0;
    padding: 0;
    width: 100%;
}

#search-section label {
    display: block;
    margin-bottom: 25px;
    font-weight: 400;
    color: #5B59E2;
}

#search-section input[type="text"] {
    width: 65%;
    height: 40px;
    font-family: 'Open Sans', sans-serif;
    font-size: 16px;
    padding-left: 15px;
    border: 1px solid #d8d8d8;
    border-radius: 5px;
    box-shadow: 0;
}

::-webkit-input-placeholder { /* Chrome/Opera/Safari */
    color:#d8d8d8;
  }
  ::-moz-placeholder { /* Firefox 19+ */
    color:#d8d8d8;
  }
  :-ms-input-placeholder { /* IE 10+ */
    color:#d8d8d8;
  }
  :-moz-placeholder { /* Firefox 18- */
    color:#d8d8d8;
  }

  #search-section button[type="submit"] {
    font-family: 'Open Sans', sans-serif;
    color: #505050;
    font-size: 16px;
    height: 40px;
    padding: 0 5%;
    border-radius: 5px;
    border: 1px solid #d8d8d8;
}

.search-results .fail-statement {
    color: #999;
    text-align: center;
    margin: 40px 0;
}

.search-results .result-box {
    border: 1px solid #d8d8d8;
    border-radius: 5px;
    padding: 25px;
    margin: 25px 0;
}

.search-results a {
    text-decoration: none;
}

.search-results .sketch-title {
    margin-bottom: 15px;
}

.search-results .sketch-title a:link,
.search-results .sketch-description {
    color: #000;
}

.search-results .download-link {
    margin-top: 15px;
    background: #5B59E2;
    border-radius: 5px;
    padding: 12px 20px; 
    display: block;
    color: #FFF;
    width: 125px;
}

.search-results .download-link:hover {
    background: rgb(88, 88, 209);
}

.search-results .download-link:active,
.search-results .download-link: focus {
    background: rgb(88, 88, 209);
}

/* Styling twitter section */
#twitter-section {
    margin-top: 40px;
}

#twitter-section .twitter-section-heading {
    margin: 15px 0;
    border-bottom: 1px solid #d8d8d8;
}

#twitter-section .twitter-section-heading h2{
    font-size: 20px;
    padding: 0 0 15px 0;
    text-align: left;
}

#twitter-section .twitter-section-heading h2 > span {
    color: #F96401;
}

#twitter-section .profile-url {
    text-decoration: none;
}
#twitter-section a:link,
#twitter-section a:visited,
#twitter-section a:active,
#twitter-section a:focus
 {
    color: #000;
    text-decoration: none;
}

#twitter-section .row {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    margin-bottom: 15px;
    align-content: center;
}

#twitter-section .twitter-result-box {
    width: 100%;
    height: 310px;
    border: 1px solid #d8d8d8;
    border-radius: 5px;
    padding: 30px;
    text-align: left;
}

#twitter-section .twitter-result-box:last-child {
    margin-bottom: 60px;
}

#twitter-section .avatar {
    height: 45px;
    border-radius: 50%;
    margin-right: 15px;
    margin-bottom: 15px;
}

#twitter-section .twitter-result-box h3 {
    font-size: 16px;
    font-weight: 600;
    margin-bottom: 15px;
}

#twitter-section .twitter-result-box p {
    font-weight: 400;
    margin-bottom: 15px;
    color: #1DA1F2;
}

#twitter-section .twitter-result-box .date {
    font-weight: 400;
    margin: 0;
    color: #505050;
}

footer {
    background: #2F2F2F;
    border-top: 1px solid #484848;
    color: #FFF;
    width: 100%;
    position: absolute;
    bottom: 0;
    right: 0;
    left: 0;
    text-align: center;
    padding: 1rem;
}

/* Media Query */
@media only screen and (min-width: 375px) {
    #header h1 {
        font-size: 36px;
        margin-top: 80px;
        margin-bottom: 60px;
    }
    
    #header p {
        color: #505050;
        margin-bottom: 50px;
    }

    #header img {
        width: 60%;
        margin-bottom: 100px;
    }

    #search-section input[type="text"] {
        width: 72%;
    }
}

@media only screen and (min-width: 414px) {
    body{
        font-size: 18px;
    }

    #header h1 {
        font-size: 40px;
        margin-top: 80px;
        margin-bottom: 60px;
    }
    
    #header p {
        color: #505050;
        margin-bottom: 50px;
    }

    #header img {
        width: 40%;
        margin-bottom: 100px;
    }

    #search-section label {
        display: block;
        margin-bottom: 25px;
        font-weight: 400;
        color: #5B59E2;
    }

    #search-section input[type="text"] {
        width: 72%;
        font-size: 18px;
    }
    
    #search-section button[type="submit"] {
        font-size: 18px;
    }
    
}

@media only screen and (min-width: 768px) {
    #header h1 {
        font-size: 32px;
        margin-top:40px;
        margin-bottom: 40px;
    }
    
    #header img {
        width: 30%;
        margin-bottom: 100px;
    }

    #search-section input[type="text"] {
        width: 81%;
    }
    
    .search-results .fail-statement {
        color: #999;
        text-align: center;
        margin: 80px 0;
    }
    
}
@media only screen and (min-width: 1024px) {
    #header h1 {
        font-size: 45px;
        margin-top: 80px;
        margin-bottom: 40px;
    }
    
    #header p {
        color: #505050;
        margin-bottom: 40px;
    }

    #header img {
        width: 20%;
        margin-bottom: 40px;
    }

    #search-section input[type="text"] {
        width: 83%;
    }
}


@media only screen and (min-width: 1025px) {

    #search-section  {
        text-align: center;
        margin-bottom: 60px;
    }

    #twitter-section .row {
        flex-wrap: nowrap;
        margin-bottom: 60px;
    }
    
    #twitter-section .twitter-result-box {
        border: 1px solid #d8d8d8;
        border-radius: 5px;
        margin-right: 10px;
        padding: 40px 20px;
        text-align: left;
    }
    
    #twitter-section .twitter-result-box .user-name {
        height: 24px;
        width: 196px;
        overflow: hidden;
        text-overflow: ellipsis;
    }

    #twitter-section .twitter-result-box .tweet-msg {
        height: 190px;
        overflow: hidden;
        text-overflow: ellipsis;
    }
    #twitter-section .twitter-result-box .date {
        height: 24px;
        overflow: hidden;
        text-overflow: ellipsis;
    }
}

